Extend configuration of dockerd, can be made bind to TCP port and be available

--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,4 +1,7 @@
 {
-    "userns-remap": "nobody:nogroup"
+{% if False %}
+    "userns-remap": "nobody:nogroup",
+{% endif %}
+    "hosts" : [ "tcp://0.0.0.0:2375", "fd://" ]
 }
 
