--- a/training/templates/docker_probe.j2
+++ b/training/templates/docker_probe.j2
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-sshpass -p{{ task3_password }} {{ task3_username }}@master docker ps
+sshpass -p{{ task3_password }} {{ task3_username }}@main docker ps
